test the ProductSystemBuilder
Create a ProductSystemBuilderTest with the following test fixture:

- process A with 1kg product output a, B with b, C with c, D with d
- A has 1kg input of b, and 1kg of c
- B has 1kg input of d, and C has an input 1kg d
- each process A, B, C, D has 1kg output of elementary flow e
- initialize the product system with A

Add the following tests:

- `testNoLinks`: no linking, calculate the system, inventory result is 1kg e
- `testLinkFromRoot`: link with A as root, calculate the system, expected 5 kg e
- `testLinkIntermediateNodes`, manually add links A<-B, A<-C, link with [B, C], expected 5 kg e
- `testLinkIntermediareNode`, manually add link A<-B, link with B, expected 3 kg e

See the `WasteCalculationTest` for an example how to create product systems and run calculations